[project]
name = "pyoorb"
description = "An open-source orbit-computation package for Solar System objects."
readme = "README.md"
authors = [
    { name = "Mikael Granvik" },
    { name = "oorb developers", email = "oorb@googlegroups.com" },
]
license = "GPL-3.0-only"
license-files = ["COPYING"]
requires-python = ">=3.10"
dynamic = ["version"]
keywords = [
    "astronomy",
    "astrophysics",
    "planetary",
    "asteroid",
    "comet",
    "space",
    "science",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Fortran",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["numpy>=2.0"]

[project.urls]
Repository = "https://github.com/oorb/oorb"
Issues = "https://github.com/oorb/oorb/issues"

[build-system]
requires = ["scikit-build-core", "numpy>=2.0", "setuptools_scm[simple]"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
ninja.version = ">=1.10"
cmake.source-dir = "python"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["python/pyoorb/_version.py"]

[tool.setuptools_scm]
version_file = "python/pyoorb/_version.py"

[tool.cibuildwheel]
skip = ["*-musllinux*", "cp3??t-*"]
archs = "native"

[tool.cibuildwheel.linux]
before-all = """
yum update -y &&
yum install lapack-devel ninja-build -y
"""

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = "apk update && apk add lapack lapack-dev ninja-build"

[[tool.cibuildwheel.overrides]]
select = "*-manylinux_2_24*"
before-all = "apt update -y && apt install liblapack-dev ninja-build -y"

[tool.cibuildwheel.macos]
before-all = """
brew install lapack ninja --force
"""
